--- a/css/layout.css
+++ b/css/layout.css
@@ -95,4 +95,11 @@ a {
   margin: 10px;
   box-sizing: border-box;
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+}
+#recentSearch .list li.on {
+  background-color: #fff;
+  color: #111;
+  border: none;
+  text-shadow: 1px 1px 0px #b3b3b3,2px 2px 0px #b3b3b3,3px 3px 0px #b3b3b3,4px 4px 0px #b3b3b3,5px 5px 0px #b3b3b3,6px 6px 0px #b3b3b3,7px 7px 0px #b3b3b3,8px 8px 0px #b3b3b3,9px 9px 0px #b3b3b3,10px 10px 0px #b3b3b3,11px 11px 0px #b3b3b3,12px 12px 0px #b3b3b3,13px 13px 0px #b3b3b3,14px 14px 0px #b3b3b3,15px 15px 0px #b3b3b3,16px 16px 0px #b3b3b3,17px 17px 0px #b3b3b3,18px 18px 0px #b3b3b3,19px 19px 0px #b3b3b3,20px 20px 0px #b3b3b3,21px 21px 0px #b3b3b3,22px 22px 0px #b3b3b3,23px 23px 0px #b3b3b3,24px 24px 0px #b3b3b3,25px 25px 0px #b3b3b3,26px 26px 0px #b3b3b3,27px 27px 0px #b3b3b3,28px 28px 0px #b3b3b3,29px 29px 0px #b3b3b3,30px 30px 0px #b3b3b3,31px 31px 0px #b3b3b3,32px 32px 0px #b3b3b3,33px 33px 0px #b3b3b3,34px 34px 0px #b3b3b3,35px 35px 0px #b3b3b3,36px 36px 0px #b3b3b3,37px 37px 0px #b3b3b3,38px 38px 0px #b3b3b3,39px 39px 0px #b3b3b3,40px 40px 0px #b3b3b3;
 }
