--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -105,6 +105,13 @@ a {
       margin: 10px;
       box-sizing: border-box;
       box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
+      overflow: hidden;
+      &.on {
+        background-color: #fff;
+        color: #111;
+        border: none;
+        @include longShadow(darken(#fff, 30), 40);
+      }
     }
   }
 }
