--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -84,6 +84,7 @@ a {
       width: calc(20% - 20px);
       box-sizing: border-box;
       box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
+      transition: none;
       img {
         width: 100%;
       }
